// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NativeFetch render 1`] = `
<DocumentFragment>
  <p>
    loading...
  </p>
</DocumentFragment>
`;

exports[`NativeFetch render:loding 1`] = `
<DocumentFragment>
  <p>
    loading...
  </p>
</DocumentFragment>
`;

exports[`NativeFetch render:no pokemon 1`] = `
<DocumentFragment>
  <p>
    no pokemon
  </p>
</DocumentFragment>
`;

exports[`NativeFetch render:pokemons 1`] = `
<DocumentFragment>
  <p>
    https://img.pokemondb.net/artwork/bulbasaur.jpg
  </p>
  <p>
    Bulbasaur
  </p>
  <p>
    https://img.pokemondb.net/artwork/ivysaur.jpg
  </p>
  <p>
    Ivysaur
  </p>
</DocumentFragment>
`;
